# ShinobiMode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  installation  requirements.txt
cad/: sensor_placement.FCStd
draws/: appShinobi.drawio  arch.drawio  readme
shinobi/: .clang-format  CMakeLists.txt  dependencies.txt  imgui.ini  log.txt  main.cpp  tdlib_log.txt  valgrind_log.txt
shinobi/gui/: ApplicationController.cpp  ApplicationController.h  CameraStream.cpp  CameraStream.h  CameraWindow.cpp  CameraWindow.h  ConfigManager.h  LayoutHelper.cpp  LayoutHelper.h  MainWindow.cpp  MainWindow.h  ModeSelector.cpp  ModeSelector.h  MyWindow.cpp  MyWindow.h  OptionScreen.cpp  OptionScreen.h  SettingWindow.cpp  SettingWindow.h  Toolbar.cpp  Toolbar.h
shinobi/interface/: IStartStop.h
shinobi/src/: Modes.cpp  Modes.h  SensorMng.cpp  SensorMng.h  Sentinel.cpp  Sentinel.h  ThreadMng.cpp  ThreadMng.h  bot.cpp  bot.h  dog.cpp  dog.h  myBot.cpp  myBot.h
shinobi/utils/: AppSerializer.cpp  AppSerializer.h  AppSetting.cpp  AppSetting.h  Audio.cpp  Audio.h  ConfigManager.cpp  LayoutHelper.cpp  Logger.cpp  Logger.h  MessageBox.cpp  MessageBox.h  Notification.cpp  Notification.h  SensorData.cpp  SensorData.h  Vlcplayer.cpp  Vlcplayer.h  date.h  myGlobals.h
tests/: test.py
text/: pir_types.md  pir_types.txt
